--- a/Desafio16/package.json
+++ b/Desafio16/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "socket.io": "^4.5.2",
     "sqlite3": "^5.1.1"
   }
 }
