--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proyectofinal",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "firebase-admin": "^11.2.0",
     "mongoose": "^6.6.7"
   }
 }
