--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "firebase-admin": "^11.2.0",
     "mongoose": "^6.6.7"
