--- a/Desafio24/package.json
+++ b/Desafio24/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "socket.io": "^4.5.3"
   }
 }
