--- a/Desafio26/package.json
+++ b/Desafio26/package.json
@@ -17,6 +17,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.7.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.5.3"
   }
 }
