--- a/Desafio28/package.json
+++ b/Desafio28/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.7.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "yargs": "^17.6.2"
   }
 }
