--- a/Desafio32/package.json
+++ b/Desafio32/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "log4js": "^6.7.1",
     "mongoose": "^6.7.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
