--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "firebase-admin": "^11.2.0",
-    "mongoose": "^6.6.7"
+    "mongoose": "^6.6.7",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
