--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "firebase-admin": "^11.2.0",
     "mongoose": "^6.6.7",
     "passport": "^0.6.0",
