--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "firebase-admin": "^11.2.0",
     "mongoose": "^6.8.3",
+    "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
