Primer intento con twilio sms

--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.8.3",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "twilio": "^3.84.1"
   }
 }
