--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "twilio": "^3.84.1"
+    "twilio": "^3.84.1",
+    "winston": "^3.8.2"
   }
 }
