--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -25,5 +25,10 @@
     "passport-local": "^1.0.0",
     "twilio": "^3.84.1",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
