--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -25,7 +25,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "twilio": "^3.84.1",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "chai": "^4.3.7",
